--- a/src/styles/components/navbar/cartwidget/__cartwidget.scss
+++ b/src/styles/components/navbar/cartwidget/__cartwidget.scss
@@ -4,8 +4,6 @@
     justify-content: center;
     align-items: center;
 
-    /* background-color: azure; */
-
     .cart-icon {
         height: 3em;
     }
@@ -14,4 +12,13 @@
         margin-top: 1em !important;
         padding: 0.2em;
     }
+}
+
+.cart-page {
+    width: 100%;
+    min-height: 100svh;
+
+    text-align: center;
+
+    background-color: yellow;
 }
