--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,1 @@
-@import "./components/navbar/navbar";
-@import "./components/itemlistcontainer/itemlistcontainer";
-@import "./components/footer/footer";
-@import "./components/slidercontainer/slidercontainer";
-@import "./components/itemcounter/itemcounter";
-@import "./components/itemdetailcontainer/itemdetailcontainer"
+@use "./components/index" as *;
